# A2AL

./: .gitattributes  .gitignore  .goreleaser.quick.yaml  .goreleaser.yaml  API.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  address.go  address_test.go  doc-local  errors.go  eth_address.go  glama.json  go.mod  go.sum  llms.txt  native_address.go  paralism_address.go  server.json  storage.go
config/: config.go  config_test.go
crypto/: ed25519.go  encrypted_keystore.go  encrypted_keystore_test.go  eth.go  eth_test.go  keystore.go  secp256k1.go  secp256k1_test.go  wipe.go
daemon/: aid_dialer.go  autopublish.go  autopublish_test.go  beacon.go  bootstrap.go  bootstrap_test.go  connpool.go  daemon.go  demo.go  event_bus.go  fetch.go  fetch_test.go  gateway.go  gateway_parse_test.go  ice_listener.go  lock_unix.go  lock_windows.go  logfilter.go  mailbox_push.go  mailbox_quic.go  mailbox_store.go  mailbox_sub.go  mcp.go  mcp_test.go  netchange.go  netchange_test.go  profile.go  routes.go  routes_test.go  service.go  service_publish_test.go  signal_listen.go  signal_listen_test.go  tunnel.go  tunnel_test.go  tunnel_tls.go  webui_embed.go
dht/: addr.go  addr_authority_test.go  bootstrap.go  debughttp.go  debughttp_test.go  fake_punch.go  fake_punch_test.go  hub_candidates.go  hub_candidates_test.go  inbound_learn.go  inbound_learn_test.go  mailbox_test.go  node.go  node_test.go  peer_health_test.go  punch.go  punch_exchange.go  punch_exchange_test.go  punch_test.go  punch_trigger_test.go  query.go  query_test.go  reach_profile.go  reach_profile_test.go  replication.go  store.go  (+10 more)
python/: README.md  pyproject.toml
python/src/a2al/: __init__.py  _sidecar.py
(+204 files in other folders)
