[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "a2al"
version = "0.1.0"
description = "Python sidecar: spawn a2ald and call its REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
authors = [{ name = "A2AL Authors" }]

[project.urls]
Homepage = "https://github.com/a2al/a2al"

[tool.setuptools.packages.find]
where = ["src"]
