[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "a2al"
version = "0.1.0"
description = "Python client for a2al: spawn a2ald and call its REST API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MPL-2.0" }
authors = [{ name = "A2AL Authors" }]
keywords = ["a2al", "a2a", "agent", "ai", "sidecar"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/a2al/a2al"
Repository = "https://github.com/a2al/a2al"
"Bug Tracker" = "https://github.com/a2al/a2al/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
a2al = ["bin/*"]
